--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "last 2 version",
+    "not dead",
+    "iOS >= 9"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.8.0",
+    "postcss-loader": "^3.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
