--- a/package.json
+++ b/package.json
@@ -5,18 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --watch"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "last 2 version",
-    "not dead",
-    "iOS >= 9"
-  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,6 +17,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "smooth-scrollbar": "^8.5.2"
   }
 }
