--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.0",
-    "postcss-loader": "^3.0.0",
+    "babel-loader": "^8.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "dependencies": {
-    "gsap": "^3.3.4",
     "material-design-icons": "^3.0.1",
     "normalize.css": "^8.0.1",
     "smooth-scrollbar": "^8.5.2"
